# reflection

./: .gitignore  Brewfile  Cargo.toml  README.md  build.sh  cx.modal.Reflection.json  cx.modal.reflection.json  flake.nix  meson.build  meson_options.txt  org.p2panda.aardvark.json  org.p2panda.reflection.json  q  vcpkg.json  x86_64-darwin-cross.txt
.github/workflows/: build.yml  install_vcpkg.ps1  rust.yml
aardvark-app/: Cargo.toml
aardvark-app/data/: meson.build  org.p2panda.aardvark.metainfo.xml.in
aardvark-app/data/resources/: meson.build  resources.gresource.xml
aardvark-app/src/: aardvark.gresource.xml  application.rs  config.rs  config.rs.in  main.rs  meson.build  secret.rs  style.css  system_settings.rs  textbuffer.rs  ui-resources.gresource.xml  window.rs  window.ui
aardvark-app/src/components/: mod.rs  multiline_entry.rs  zoom_level_selector.rs  zoom_level_selector.ui
aardvark-app/src/connection_popover/: mod.rs
aardvark-app/src/open_dialog/: mod.rs  open_dialog.ui
aardvark-app/src/open_popover/: mod.rs  open_popover.ui
aardvark-doc/: Cargo.toml
aardvark-doc/src/: author.rs  authors.rs  crdt.rs  document.rs  documents.rs  lib.rs  service.rs
aardvark-node/: Cargo.toml
aardvark-node/migrations/: 20250418140035_create_tables.sql
aardvark-node/src/: document.rs  lib.rs  network.rs  node.rs  operation.rs  store.rs  topic.rs  topics.rs
assets/macOS-icon-sources/: README.txt
assets/macOS-icon-sources/sketch/: Reflection-Legacy.sketch  Reflection.sketch
build-aux/: Brewfile  build_macos.sh
data/: meson.build  org.p2panda.aardvark.desktop.in  org.p2panda.aardvark.gschema.xml  org.p2panda.aardvark.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
reflection-app/: Cargo.toml  meson.build
reflection-app/data/: cx.modal.Reflection.desktop.in  cx.modal.Reflection.desktop.in.in  cx.modal.Reflection.gschema.xml  cx.modal.Reflection.metainfo.xml.in  cx.modal.Reflection.service.in  cx.modal.reflection.desktop.in  cx.modal.reflection.gschema.xml  cx.modal.reflection.metainfo.xml.in  cx.modal.reflection.service.in  meson.build  org.p2panda.reflection.desktop.in  org.p2panda.reflection.gschema.xml  org.p2panda.reflection.metainfo.xml.in  org.p2panda.reflection.service.in
reflection-app/data/icons/: cx.modal.Reflection.icns  meson.build
reflection-app/data/resources/: resources.gresource.xml
reflection-app/po/: POTFILES.in  meson.build
reflection-app/src/: application.rs  config.rs.in  document_view.blp  document_view.rs  document_view.ui  error_page.blp  error_page.rs  error_page.ui  mac-resources.gresource.xml  mac-style.css  main.rs  meson.build  secret.rs  shortcuts-dialog.blp  style.css  system_settings.rs  textbuffer.rs  textview.rs  ui-resources.gresource.xml  utils.rs  window.blp  window.rs  window.ui
reflection-app/src/components/: avatar.rs  indicator_bin.rs  mod.rs  multiline_entry.rs  zoom_level_selector.blp  zoom_level_selector.rs
reflection-app/src/connection_popover/: author_list.rs  author_row.blp  author_row.rs  authors_stack.blp  authors_stack.rs  authors_stack.ui  avatar_stack.rs  connection_popover.blp  connection_popover.ui  mod.rs  overlapping_avatars.rs
reflection-app/src/gtk/: help-overlay.blp  help-overlay.ui
reflection-app/src/landing_view/: document_row.blp  document_row.rs  landing_view.blp  mod.rs
reflection-app/src/open_dialog/: mod.rs  open_dialog.blp  open_dialog.ui
reflection-app/src/open_popover/: mod.rs  open_popover.blp  open_popover.ui
reflection-doc/: Cargo.toml
reflection-doc/src/: author.rs  authors.rs  document.rs  documents.rs  lib.rs  service.rs
reflection-node/: Cargo.toml
reflection-node/migrations/: 20250418140035_create_tables.sql  20251130191542_cascate_deletion.sql
reflection-node/src/: author_tracker.rs  database.rs  document.rs  document_store.rs  ephemerial_operation.rs  forge.rs  lib.rs  manager.rs  message.rs  network.rs  node.rs  node_inner.rs  operation.rs  operation_store.rs  persistent_operation.rs  store.rs  subscription.rs  subscription_inner.rs  topic.rs  topic_store.rs  traits.rs  utils.rs
scripts/: build_macos.sh
src/: aardvark.gresource.xml  application.rs  config.rs  config.rs.in  document.rs  main.rs  meson.build  network.rs  operation.rs  style.css  textbuffer.rs  window.rs  window.ui
