[package]
name = "aardvark"
version = "0.1.0"
edition = "2021"

[dependencies]
aardvark-doc = { path = "../aardvark-doc" }
aardvark-node = { path = "../aardvark-node" }
anyhow = "1.0.94"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.128"
sourceview = { package = "sourceview5", version = "0.9" }
tokio = { version = "1.42.0", features = ["sync"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
