[package]
name = "aardvark-doc"
version = "0.1.0"
edition = "2021"
authors = [
  "adz <x12@adz.garden>",
  "Julian Sparber <julian@sparber.net>"
]


[dependencies]
async-channel = "2.3.1"
loro = "1.3.1"
thiserror = "2.0.11"
aardvark-node = { path = "../aardvark-node" }
anyhow = "1.0.94"
glib = "0.20"
tokio = { version = "1.42.0", features = ["macros", "test-util"] }
tracing = "0.1"
p2panda-core = { version = "0.2.0", default-features = false }