[package]
name = "aardvark-doc"
version = "0.1.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "Julian Sparber <julian@sparber.net>"
]

[dependencies]
aardvark-node = { path = "../aardvark-node" }
anyhow = "1.0.94"
async-channel = "2.3.1"
glib = "0.20"
gio = "0.20"
loro = "1.3.1"
p2panda-core = { git = "https://github.com/p2panda/p2panda", rev = "f3a016324b69beac45cf20a792fe6890cb1a21e3", default-features = false }
thiserror = "2.0.11"
tracing = "0.1"