[package]
name = "aardvark-doc"
version = "0.1.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "Julian Sparber <julian@sparber.net>"
]

[dependencies]
aardvark-node = { path = "../aardvark-node" }
anyhow = "1.0.94"
async-channel = "2.3.1"
glib = "0.20"
gio = "0.20"
loro = "1.5"
p2panda-core = { git = "https://github.com/p2panda/p2panda", rev = "085a57206aeae70142176c0777ed2febc7b98664", default-features = false }
thiserror = "2.0.11"
tracing = "0.1"
