[package]
name = "aardvark-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
ciborium = "0.2.2"
p2panda-core = { git = "https://github.com/p2panda/p2panda", rev = "6286e7b31e82a5c97cfe0de0cf020aba93d7a164" }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda", rev = "6286e7b31e82a5c97cfe0de0cf020aba93d7a164", features = ["mdns"] }
p2panda-net = { git = "https://github.com/p2panda/p2panda", rev = "6286e7b31e82a5c97cfe0de0cf020aba93d7a164" }
p2panda-store = { git = "https://github.com/p2panda/p2panda", rev = "6286e7b31e82a5c97cfe0de0cf020aba93d7a164" }
p2panda-stream = { git = "https://github.com/p2panda/p2panda", rev = "6286e7b31e82a5c97cfe0de0cf020aba93d7a164" }
p2panda-sync = { git = "https://github.com/p2panda/p2panda", rev = "6286e7b31e82a5c97cfe0de0cf020aba93d7a164", features = ["log-sync"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt", "sync"] }
tokio-stream = "0.1.17"
tracing = "0.1"
