[package]
name = "reflection"
version = "0.1.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "Julian Sparber <julian@sparber.net>"
]

[dependencies]
reflection-doc = { path = "../reflection-doc" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
sourceview = { package = "sourceview5", version = "0.9" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ashpd = { version = "0.9", default-features = false, features = ["tracing", "async-std"] }
thiserror = { version = "2.0" }
futures-util = "0.3"
oo7 = { version = "0.4", default-features = false, features = [
    "openssl_crypto",
    "async-std",
    "tracing",
] }

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
