[package]
name = "reflection-doc"
version = "0.3.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "Julian Sparber <julian@sparber.net>"
]

[dependencies]
anyhow = "1.0.101"
gio = "0.21"
glib = "0.21"
hex = "0.4.3"
indexmap = "2.13.0"
loro = "1.10.8"
rand = "0.10.0"
reflection-node = { path = "../reflection-node" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1"

[dev-dependencies]
reflection-node = { path = "../reflection-node", features = ["test_utils"] }
test-log = { version = "0.2.19", default-features = false, features = ["trace", "color"] }
