[package]
name = "reflection-node"
version = "0.1.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "Julian Sparber <julian@sparber.net>"
]

[dependencies]
thiserror = "2.0.18"
chrono = "0.4.43"
ciborium = "0.2.2"
p2panda-core = { git = "https://github.com/p2panda/p2panda", rev = "8969d8c70a8daf72fa3899c38992e1135504ceb0" }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda", rev = "8969d8c70a8daf72fa3899c38992e1135504ceb0" }
p2panda-net = { git = "https://github.com/p2panda/p2panda", rev = "8969d8c70a8daf72fa3899c38992e1135504ceb0" }
p2panda-store = { git = "https://github.com/p2panda/p2panda", rev = "8969d8c70a8daf72fa3899c38992e1135504ceb0", features = ["sqlite"], default-features = false }
p2panda-stream = { git = "https://github.com/p2panda/p2panda", rev = "8969d8c70a8daf72fa3899c38992e1135504ceb0" }
p2panda-sync = { git = "https://github.com/p2panda/p2panda", rev = "8969d8c70a8daf72fa3899c38992e1135504ceb0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"], default-features = false }
tokio = { version = "1.49.0", features = ["rt", "sync"] }
tokio-stream = "0.1.18"
tracing = "0.1"
test-log = { version = "0.2.19", default-features = false, features = ["trace", "color"] }
hex = "0.4.3"
rand_chacha = "0.10.0"
iroh = "0.96.1"
