[package]
name = "reflection-node"
version = "0.2.0"
edition = "2024"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
  "Julian Sparber <julian@sparber.net>"
]

[features]
test_utils = []

[dependencies]
chrono = "0.4.43"
p2panda = { git = "https://github.com/p2panda/p2panda", rev = "534363cfc33d2e3275748bf8b0a9307e6eb261c0" }
p2panda-core = { git = "https://github.com/p2panda/p2panda", rev = "534363cfc33d2e3275748bf8b0a9307e6eb261c0" }
p2panda-store = { git = "https://github.com/p2panda/p2panda", rev = "534363cfc33d2e3275748bf8b0a9307e6eb261c0" }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"], default-features = false }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "sync"] }
tokio-stream = "0.1.18"
tracing = "0.1"

[dev-dependencies]
test-log = { version = "0.2.19", default-features = false, features = ["trace", "color"] }
